src/objects/Case_Plan_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Case Plan Assets</relationshipLabel>
        <relationshipName>Case_Plan_Assets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Plan__c</fullName>
        <label>Case Plan</label>
        <referenceTo>Case_Plan__c</referenceTo>
        <relationshipLabel>Case Plan Assets</relationshipLabel>
        <relationshipName>Case_Plan_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Serial_Number_Searchable__c</fullName>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>Asset__r.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <label>Case Plan Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Case Plan Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Plan Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>